# gtklp

./: AUTHORS  BUGS  COMPILING  COPYING  ChangeLog  Makefile.am  README  README.FAQ  README.Irix  README.Solaris  README.md  TODO  USAGE  autogen.sh  builtall  builtall.SLACK  changelog.md  config.h.fallback  configure.ac  gtklp-1.3.4.spec  gtklp_man.md  gtklpq_man.md  libtool  stats.shtml  stats.template
gtklp/: Makefile.am  black.xpm  borderD.xpm  borderDD.xpm  borderkd.xpm  borderkdd.xpm  bordernone.xpm  btlr.xpm  btrl.xpm  conflict.xpm  duplex_long.xpm  duplex_none.xpm  duplex_short.xpm  file.c  file.h  general.c  general.h  gtklp.c  gtklp.h  gtklp_functions.c  gtklp_functions.h  gtklptab.c  gtklptab.h  hpgl2.c  hpgl2.h  image.c  image.h  imgpos0.xpm  imgpos1.xpm  landscape.xpm  logo2.xpm  logo2_k.xpm  logo_k.xpm  lrbt.xpm  lrtb.xpm  output.c  output.h  ppd.c  ppd.h  rarrow.xpm  (+9 more)
gtklpq/: Makefile.am  gtklpq.c  gtklpq.h  gtklpq_accept_job.xpm  gtklpq_exit.xpm  gtklpq_functions.c  gtklpq_functions.h  gtklpq_hold.xpm  gtklpq_move.xpm  gtklpq_prio.xpm  gtklpq_reject_job.xpm  gtklpq_release.xpm  gtklpq_start_printer.xpm  gtklpq_stop_job.xpm  gtklpq_stop_jobs.xpm  gtklpq_stop_printer.xpm  printer.c  printer.h
include/: defaults.h  gettext.h
libgtklp/: Makefile.am  error.xpm  info.xpm  libgtklp.c  libgtklp.h  libgtklp.la  myfault.xpm  warn.xpm
libgtklp/icons/: 16x16.xpm  24x24.xpm  32x32.xpm  48x48.xpm  64x64.xpm
m4/: ChangeLog  Makefile  Makefile.am  Makefile.in
man/: Makefile  Makefile.am  Makefile.in  gtklp-ru.1  gtklp-uk.1  gtklp.1  gtklpq-ru.1  gtklpq-uk.1  gtklpq.1
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  ca.po  ca_ES.po  chs.po  cht.po  cs.po  cz.po  da.po  de.po  de.po.orig  en.po  es.po  fr.po  hr.po  hu.po  it.po  ja.po  nl.po  pl.po  pt_BR.po  ru.po  uk_UA.po  zh_CN.po  zh_TW.po
