SUBDIRS = m4 po libgtklp gtklp gtklpq man

EXTRA_DIST = m4/ChangeLog  config.rpath BUGS COMPILING Makefile.fallback USAGE builtall autogen.sh gtklp.spec include/defaults.h include/gettext.h po/LINGUAS po/Makevars po/Rules-quot po/boldquot.sed po/en@boldquot.header po/en@quot.header po/insert-header.sin po/quot.sed 

ACLOCAL_AMFLAGS = -I m4
